# dial9-tokio-telemetry

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  THIRD_PARTY_LICENSES  compose.yml  release-plz.toml
.github/workflows/: audit.yml  benchmarks-pr.yml  benchmarks.yml  ci.yml  stress-test.yml
dial9/: Cargo.toml
dial9-macro/: Cargo.toml
dial9-macro/src/: lib.rs
dial9-tokio-telemetry/: Cargo.toml  README.md
dial9-tokio-telemetry/benches/: e2e_workload.rs  memory_profiling_bench.rs  overhead_bench.rs  pipeline_heap_bench.rs  threadlocal_encode_iai.rs  tracing_layer_bench.rs  tracing_layer_iai.rs  writer_encode_iai.rs  writer_write_encoded_iai.rs
dial9-tokio-telemetry/design/: in-memory-pipeline.md  metrique-integration.md  tl-buffer-drain.md
dial9-tokio-telemetry/examples/: analyze_trace.rs  block_in_place_workload.rs  blocking_pool_tracking.rs  blocking_sleep.rs  conditionally_enable.rs  cpu_profile_workload.rs  custom_events.rs  custom_pipeline.rs  generate_diagnostic_traces.rs  in_memory_pipeline.rs  joinset_tracking.rs  kernel_sched_events.rs  long_workload.rs  many_workers.rs  multi_runtime.rs  on_trigger_dump.rs  on_trigger_dump_windows.rs  production_use.rs  realistic_workload.rs  s3_stress_test.rs  simple_workload.rs  telemetry_rotating.rs  thread_per_core.rs  trace_to_fat_jsonl.rs  trace_to_jsonl.rs  tracing_sleep.rs
dial9-tokio-telemetry/src/: analysis_unstable.rs  config.rs  dump.rs  legacy_config.rs  lib.rs  metrics.rs  primitives.rs  rate_limit.rs  sampling.rs  task_dumped.rs  traced.rs  tracing_layer.rs  unwind.rs
dial9-tokio-telemetry/src/background_task/: boot_id.rs  mod.rs  payload.rs  s3.rs  sealed.rs  testutil.rs
dial9-tokio-telemetry/src/background_task/fs/: disk.rs  mem.rs  mod.rs
dial9-tokio-telemetry/src/memory_profiling/: allocator.rs  config.rs  hook.rs  mod.rs  profiler.rs  ring.rs  source.rs
dial9-tokio-telemetry/src/telemetry/: analysis.rs  analysis_events.rs  buffer.rs  cpu_profile.rs  custom_events.rs  custom_metrics.rs  events.rs  format.rs  mod.rs  process_resource_usage.rs  socket_accept_queues.rs  system_metrics.rs  task_dump_config.rs  writer.rs
dial9-tokio-telemetry/src/telemetry/recorder/: builder.rs  event_writer.rs  flush_loop.rs  guard.rs  handle.rs  mod.rs  runtime_context.rs  shared_state.rs  source.rs  tokio_hooks.rs
dial9-tokio-telemetry/tests/: background_symbolization.rs  builtin_event_serde.rs  common.rs  cpu_sample_clock_alignment.rs  custom_events.rs  custom_metrics.rs  disable_stops_events.rs  dump_trigger.rs  echo_server.rs  end_to_end.rs  guard_seals_on_drop.rs  joinset_tracing.rs  js_parser.rs  macro_graceful_shutdown_symbolization.rs  macro_main.rs  memory_profiling_hook_captures.rs  memory_profiling_hook_realloc.rs  memory_profiling_install_already_installed.rs  memory_profiling_install_disabled.rs  memory_profiling_install_publishes.rs  memory_profiling_install_registers_source.rs  memory_profiling_no_overflow.rs  memory_profiling_overflow_event.rs  memory_profiling_segment_metadata.rs  namespace_isolation.rs  on_trigger_dump.rs  park_unpark_tid.rs  process_resource_usage.rs  rotation_time_alignment.rs  s3_integration.rs  sched_clock_alignment.rs  sched_events.rs  sched_profiler_fd_leak.rs  socket_accept_queues.rs  spawn_with.rs  system_metrics.rs  task_dump.rs  tokio_hooks.rs  tokio_instrumentation.rs  tracing_layer.rs  (+2 more)
dial9-tokio-telemetry/tests/fake_s3/: mod.rs
dial9-trace-format/: Cargo.toml  README.md  SPEC.md
dial9-trace-format-derive/: Cargo.toml
dial9-trace-format-derive/src/: lib.rs
dial9-trace-format-derive/src/snapshots/: dial9_trace_format_derive__tests__all_field_types.snap  dial9_trace_format_derive__tests__doc_comments_copied_to_ref_fields.snap  dial9_trace_format_derive__tests__empty_event.snap  dial9_trace_format_derive__tests__simple_event.snap  dial9_trace_format_derive__tests__timestamp_attribute.snap  dial9_trace_format_derive__tests__unit_attribute.snap  dial9_trace_format_derive__tests__wire_slot_event.snap
dial9-trace-format/benches/: codec_iai.rs
dial9-trace-format/js/: decode.js  slice.js
dial9-trace-format/src/: de.rs  decoder.rs  encoder.rs  lib.rs  schema.rs  types.rs
dial9-trace-format/tests/: annotations.rs  derive_round_trip.rs  serde_deserialize.rs
dial9-viewer/: Cargo.toml  README.md  build.rs
dial9-viewer/skills/: analysis.md  analyze.js  header.md  loading.md  recipes.md  red-flags.md  runtime.md
dial9-viewer/skills/dial9-html-report/: SKILL.md
dial9-viewer/skills/dial9-s3-analysis/: SKILL.md
dial9-viewer/skills/dial9-toolkit/scripts/: analyze.js
dial9-viewer/skills/dial9-trace-analysis/: SKILL.md
dial9-viewer/skills/dial9-trace-loading/: SKILL.md
dial9-viewer/skills/dial9-trace-recipes/: SKILL.md
dial9-viewer/src/: cli.rs  lib.rs  main.rs  report_serve.rs  storage.rs
dial9-viewer/src/server/: mod.rs  prefixes.rs  trace.rs
dial9-viewer/tests/: report_serve_test.rs  server_test.rs
dial9-viewer/toolkit/: analyze.js  decode.js  trace_analysis.js  trace_parser.js
dial9-viewer/ui/: README.md  bench_parse.js  flamegraph.css  flamegraph.html  flamegraph.js  flamegraph_export.js  format.js  heatmap.js  index.html  panel_layout.js  prefix_detect.js  test_all_skills_snippets.js  test_directory_parse.js  test_enclosing_spans.js  test_flamegraph_export.js  test_flamegraph_recipes.js  test_format.js  test_harness.js  test_heatmap.js  test_panel_layout.js  test_parser.js  test_prefix_detection.js  test_slice.js  test_stream_parse.js  test_task_lifecycle.js  test_trace_analysis.js  test_trace_integrity.js  trace_analysis.js  trace_parser.js  viewer.html
docs/agents/: domain.md
docs/design/: cpu-sampling-and-worker-id-design.md  memory-profiling.md  metrique-integration.md  on-trigger-pipeline-runs.md  s3-worker-design.md  schema-driven-view-specs.md
examples/metrics-service/: Cargo.toml
perf-self-profile/: Cargo.toml
perf-self-profile/examples/: basic.rs  test_sleep.rs
perf-self-profile/src/: lib.rs  offline_symbolize.rs  sys.rs  (+3 more)
scripts/: e2e-trace-tests.sh  regenerate_demo_trace_docker.sh
(+18 files in other folders)
