[workspace]
resolver = "3"
members = [
    "dial9-core",
    "dial9-tokio-telemetry",
    "dial9-trace-format",
    "dial9-trace-format-derive",
    "dial9-macro",
    "dial9-viewer",
    "dial9",
    "perf-self-profile",
    "examples/metrics-service",
    "examples/simple-local",
]
exclude = [
    "dial9-trace-format/fuzz",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dial9-rs/dial9-tokio-telemetry"

[workspace.dependencies]
libc = "0.2"
dial9-core = { version = "0.4.0-alpha.1", path = "dial9-core" }
dial9-perf-self-profile = { version = "0.4.4", path = "perf-self-profile" }
dial9-trace-format = { version = "0.5.0", path = "dial9-trace-format" }
dial9-trace-format-derive = { version = "0.5.0", path = "dial9-trace-format-derive" }
dial9-macro = { version = "0.4.0", path = "dial9-macro" }
assert2 = "0.4"

[profile.release]
debug = 1
