[package]
name = "dial9-tokio-telemetry"
version = "0.4.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true
readme = "README.md"
description = "Low-overhead runtime telemetry for Tokio with poll timing, wake events, and CPU profiling"
keywords = ["tokio", "telemetry", "profiling", "tracing", "symposium"]
categories = ["asynchronous", "development-tools::profiling"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tokio_unstable"]
rustc-args = ["--cfg", "tokio_unstable", "-C", "force-frame-pointers=yes"]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(shuttle)", "cfg(iai_enabled)"] }

[dependencies]
tokio = { version = "1.52.0", features = [
    "rt",
    "macros",
    "time",
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
] }
tokio-util = "0.7"
arc-swap = "1"
crossbeam-queue = "0.3"
libc.workspace = true
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "std",
] }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
bytes = "1"
dial9-perf-self-profile = { workspace = true, optional = true }
dial9-trace-format = { workspace = true, features = ["serde", "serde-deserialize"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = [
    "registry",
] }
hostname = "0.4"
bon = "3"
aws-sdk-s3-transfer-manager = { version = "0.1.3", optional = true, default-features = false }
aws-sdk-s3 = { version = "1", default-features = false, optional = true, features = [
    "behavior-version-latest",
    "sigv4a",
    "rt-tokio",
    "default-https-client",
] }
aws-config = { version = "1", optional = true, default-features = false }
flate2 = { version = "1" }
time = { version = "0.3", features = ["formatting", "macros"], optional = true }
metrique-writer = "0.1"
metrique = { version = "0.1.23", features = ["local-format"] }
metrique-timesource = "0.1"
dial9-macro = { workspace = true }
shuttle = { version = "0.9.1", optional = true }

[features]
analysis = []
cpu-profiling = ["dep:dial9-perf-self-profile"]
_shuttle = [
    "dep:shuttle",
    "metrique-timesource/custom-timesource",
    "metrique-timesource/test-util",
]
## Capture async backtraces at tokio yield points. Linux-only
## (aarch64/x86/x86_64): tokio's upstream `taskdump` feature refuses to
## compile on other targets. Enabling this feature on an unsupported target
## is a hard compile error from tokio.
taskdump = ["tokio/taskdump"]
tracing-layer = ["dep:tracing-subscriber"]
## Sampled memory allocation profiling via ring buffers.
memory-profiling = ["dep:dial9-perf-self-profile"]
worker-s3 = [
    "dep:aws-sdk-s3-transfer-manager",
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:time",
]
## Removes #[non_exhaustive] from event structs so downstream crates can
## construct them directly. Unstable: no semver guarantees on new fields.
unstable-events = []
## All features except platform-specific ones (taskdump). Used in CI for non-Linux targets.
__nonlinux_all_features = [
    "analysis",
    "cpu-profiling",
    "memory-profiling",
    "tracing-layer",
    "worker-s3",
]

[dev-dependencies]
dial9-tokio-telemetry = { path = ".", features = [
    "analysis",
    "memory-profiling",
    "tracing-layer",
    "unstable-events",
    "worker-s3",
] }
# Tests use the serde-based decoder API. Enabling the feature only here keeps
# it out of the production build of the library.
dial9-trace-format = { workspace = true, features = ["serde-deserialize"] }
assert2 = { workspace = true }
criterion = "0.5"
clap = { version = "4", features = ["derive", "env"] }
hdrhistogram = "7"
metrique-timesource = { version = "0.1", features = [
    "custom-timesource",
    "tokio",
] }
metrique-writer = { version = "0.1", features = ["test-util"] }
tokio = { version = "1.52.0", features = ["test-util"] }
proptest = "1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
s3s = "0.13.0"
s3s-fs = "0.13.0"
s3s-aws = "0.13.0"
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "default-https-client",
    "http-1x",
    "rt-tokio",
    "sigv4a",
] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
async-trait = "0.1.89"
uuid = { version = "1", features = ["v4"] }
iai-callgrind = "=0.16.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
dial9-tokio-telemetry = { path = ".", features = [
    "cpu-profiling",
    "memory-profiling",
    "worker-s3",
    "analysis",
    "taskdump",
    "tracing-layer",
] }
nix = { version = "0.29", features = ["process"] }

[[bench]]
name = "overhead_bench"
harness = false

[[bench]]
name = "e2e_workload"
harness = false

[[bench]]
name = "memory_profiling_bench"
harness = false
required-features = ["memory-profiling"]

[[bench]]
name = "pipeline_heap_bench"
harness = false
required-features = ["cpu-profiling"]

[[example]]
name = "blocking_pool_tracking"
required-features = ["cpu-profiling"]

[[example]]
name = "blocking_sleep"
required-features = ["cpu-profiling"]

[[example]]
name = "cpu_profile_workload"
required-features = ["cpu-profiling", "analysis"]

[[example]]
name = "s3_stress_test"
required-features = ["worker-s3"]

[[example]]
name = "analyze_trace"
required-features = ["analysis"]

[[example]]
name = "trace_to_jsonl"
required-features = ["analysis"]

[[example]]
name = "trace_to_fat_jsonl"
required-features = ["analysis"]

[[example]]
name = "kernel_sched_events"
required-features = ["cpu-profiling", "analysis"]

[[example]]
name = "generate_diagnostic_traces"
required-features = ["cpu-profiling"]

[[example]]
name = "thread_per_core"
required-features = ["analysis"]

[[example]]
name = "tracing_sleep"
required-features = ["tracing-layer"]

[[bench]]
name = "tracing_layer_bench"
harness = false
required-features = ["tracing-layer"]

[[bench]]
name = "tracing_layer_iai"
harness = false
required-features = ["tracing-layer"]

[[bench]]
name = "writer_encode_iai"
harness = false

[[bench]]
name = "threadlocal_encode_iai"
harness = false

[[bench]]
name = "writer_write_encoded_iai"
harness = false
