[package]
name = "dial9-trace-format-derive"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macro for dial9-trace-format TraceEvent trait"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
insta = "1"
prettyplease = "0.2"
