[package]
name = "dial9-trace-format"
version = "0.3.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-describing binary trace format with schema registry"
autobenches = false

[features]
serde = ["dep:serde"]

[dependencies]
dial9-trace-format-derive = { workspace = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
flate2 = "1"
iai-callgrind = "=0.16.1"

[[bench]]
name = "codec_iai"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(iai_enabled)'] }
